<resources>
    <string name="app_name">Pruebacoink</string>
    <string name="str_main">LA ALCANCÍA QUE SIEMPRE TE ACOMPAÑA</string>
    <string name="register">REGÍSTRATE</string>
    <string name="login">INGRESA</string>
    <!-- UserPhoneFragment -->
    <string name="title_user_phone">NÚMERO CELULAR</string>
    <string name="desc_user_number">Para comenzar, por favor \n ingresa tu número celular.</string>
    <string name="xxx_xxxxxx">XXXXXXXXX</string>
    <!-- UserInfoFragment -->
    <string name="title_user_info">DATOS DE CUENTA</string>
    <string name="desc_one_user_info">¿CUÁLES SON TUS DATOS?</string>
    <string name="desc_two_user_info">Ahora necesitamos saber \n algunos datos tuyos</string>
    <string name="desc_doc_user_info">Documento de identidad</string>
    <string name="desc_config_user_info">Configura tu cuenta</string>
    <string name="next">SIGUIENTE</string>
    <!-- UserInfoFragment EditText -->
    <string name="documentTypeStr">Tipo de documento</string>
    <string name="documentNumberStr">Número de documento</string>
    <string name="documentDateStr">Fecha de expedición del documento</string>
    <string name="dateBirthdayStr">Fecha de nacimiento</string>
    <string name="genderStr">Genero</string>
    <string name="emailStr">Correo electrónico</string>
    <string name="emailConfirmStr">Confirmar correo electrónico</string>
    <string name="pinStr">PIN de seguridad</string>
    <string name="pinConfirmStr">Confirmar PIN de seguridad</string>
    <!-- UserInfoFragment Errors -->
    <string name="error_field_required">Campo Requerido</string>
    <string name="error_invalid_email">Correo electronico es invalido</string>
    <string name="error_email_match">El Correo electronico no coincide</string>
    <string name="error_pin_code">Debe ser de 4 digitos</string>
    <string name="error_pin_match">El pin no coincide </string>
    <!-- UserFinishFragment -->
    <string name="title_user_finish">FINALIZAR</string>
    <string name="desc_one_user_finish">ESTAS MUY CERCA DE SER \n PARTE DE COINK.</string>
    <string name="desc_two_user_finish">Solo es necesario que leas \ndetenidamente el contrato que se \nencuentra al final de esta pantalla\ny lo aceptes.</string>
    <string name="desc_title_user_finish">LO MÁS IMPORTANTE</string>
    <string name="terms_user_finish">Para la apertura del Depósito de Bajo Monto en COINK debes ser una persona natural que de acuerdo con nuestra legislación vigente te encuentres en plena capacidad para adquirir derechos y contraer obligaciones. \n\nAbrirás una cuenta COINK de Bajo Monto la cual te permitirá tener un saldo hasta por 8 salarios mínimos en el mes y realizar débitos por el mismo valor. \n\nSi deseas sobrepasar estos límites debes solicitarnos la apertura de un Depósito Ordinario COINK Persona Natural. \n\nSolo puedes tener una cuenta COINK de Bajo Monto y podrás utilizar tu dispositivo móvil para consultar tu saldo, tus movimientos, realizar tus transacciones y administrar tu cuenta. \n\nRecuerda que no necesitas saldo mínimo ni monto inicial para su apertura.</string>
    <string name="title_terms">Lee tu contrato</string>
    <string name="accept_terms">He leído ya acepto el contrato</string>
    <string name="ok_str">ACEPTAR</string>
    <!-- UserSuccessFragment-->
    <string name="title_user_success">¡Bienvenido a Coink!</string>
    <string name="desc_user_success">¡Cuenta creada exitosamente, tu marrano ya está listo para que empieces a ahorrar!</string>
    <string name="continue_str">CONTINUAR</string>
    <!-- region Remote Errors -->
    <integer name="error_remote_default_code">0</integer>
    <string name="error_remote_default_desc">Problemas de conexión a internet, por favor intente nuevamente.</string>

    <integer name="error_remote_timeout">1</integer>
    <string name="error_remote_timeout">No hay conexión con el servidor. Verifique su conexión a internet e intente nuevamente.</string>

    <integer name="error_remote_unhost">2</integer>
    <string name="error_remote_unhost">No hay conexión con el servidor. Verifique su conexión a internet e intente nuevamente.</string>
    <!-- endregion -->
    <integer name="error_ui_default">0</integer>
    <string name="error_ui_default">Ocurrió un error, por favor intente nuevamente.</string>

    <!-- region Util -->
    <string name="util_loading">Cargando…</string>
    <!-- endregion -->
</resources>