<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.make.deve.pruebacoink.ui.registerFragments.UserRegisterViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:src="@drawable/ic_oink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:padding="20dp"
            android:text="@string/desc_one_user_info"
            android:textColor="@color/darkGreen"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="@string/desc_two_user_info"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" />
        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/green"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/desc_doc_user_info"
            android:textColor="@color/darkGreen"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <LinearLayout
            android:id="@+id/infoBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="38"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            style="@style/ExposedDropdownMenuText.App.TextInputLayout"
            app:boxBackgroundColor="@android:color/white"
            >
            <AutoCompleteTextView
                android:id="@+id/documentType"
                style="@style/MakeEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/documentTypeStr"
                app:hintEnabled="true"
                android:imeOptions="actionNext"
                android:inputType="none"
                tools:text="" />
        </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <EditText
                    android:id="@+id/documentNumber"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/documentNumberStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <EditText
                    android:id="@+id/documentDateExp"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/documentDateStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <EditText
                    android:id="@+id/dateBirthday"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dateBirthdayStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="date"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/ExposedDropdownMenuText.App.TextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <AutoCompleteTextView
                    android:id="@+id/gender"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/genderStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="none"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserratbold"
                android:text="@string/desc_config_user_info"
                android:textColor="@color/darkGreen"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view" />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <EditText
                    android:id="@+id/email"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                >
                <EditText
                    android:id="@+id/emailConfirm"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/emailConfirmStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/pinCode"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pinStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionNext"
                    android:inputType="numberPassword"
                    android:lines="1"
                    tools:text="" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                style="@style/MakeTextInputLayout"
                app:boxBackgroundColor="@android:color/white"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/pinCodeConfirm"
                    style="@style/MakeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pinConfirmStr"
                    app:hintEnabled="true"
                    android:imeOptions="actionUnspecified"
                    android:inputType="numberPassword"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>



        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/roundedbutton"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserratbold"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/infoBox" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>